# drift_models

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS
Drift_Models/: Drift_Models.md
configs/: README.md
docs/: EXECUTION_CHECKLIST.md  IMPLEMENTATION_PLAN.md  PLAN_EXECUTION_IMAGENET_LATENT.md  PROGRESS_BARS.md  README.md  RELEASE_CHECKLIST.md  SPEC_CONVO.md  branch_protection.md  checklist_imagenet_latent_to_85.md  checklist_to_100.md  checklist_to_100_exact.md  checklist_to_80.md  ci_local_validation_20260225.md  claim_boundary_audit_20260225.md  claim_to_evidence_matrix.md  code_structure_cleanup_checklist.md  commands.md  compatibility_matrix.md  decision_closure_status.md  decision_log.md  deprecation_matrix.md  deviations_table.md  disk_requirements.md  entrypoint_repro_audit.md  eval_contract.md  experiment_log.md  faithfulness_evidence_requirements.md  faithfulness_status.md  feature_loss_parity.md  generator_arch_parity.md  generator_microvariant_selection_20260303.md  generator_parity_audit.md  generator_stability_report.md  getting_started.md  golden_artifacts.md  hardware_what_if.md  imagenet_dataset_provenance.md  imagenet_recovery_comparison_20260213.md  imagenet_recovery_matrix_2x2_20260213_restart_r3.md  imagenet_recovery_matrix_2x2_20260213_restart_r3_results.md  (+29 more)
drifting_models/: __init__.py  drift_field.py  drift_loss.py
scripts/: README.md  __init__.py  _legacy_forward.py  append_experiment_log.py  audit_claim_eval_contract.py  audit_faithful_config_toggles.py  audit_nearest_neighbors.py  audit_run_bundle.py  build_toy_trajectory_panels.py  cache_reference_stats.py  capture_sdvae_provenance.py  check_config_tiers.py  check_feature_loss_reduction_scaling.py  check_feature_normalization_ab.py  check_feature_x2_toggle_effect.py  check_latent_overfit.py  check_queue_determinism.py  check_script_surface_registry.py  check_toy_determinism.py  check_toy_regression.py  disk_cleanup_checkpoints.py  eval_alpha_sweep.py  eval_fid_is.py  eval_last_k_checkpoints.py  export_cifar10_imagefolder.py  make_run_root.py  (+47 more)
(+208 files in other folders)
